<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <!--
     Illia M. Popov | ID: n01421791
     William Margalik | ID: n01479878
     Dylan Ashton | ID: n01442206
     Ahmad Aljawish | ID: n01375348-->
    <item android:title="@string/shopping">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/home_screen"
                    android:icon="@drawable/ic_home_foreground"
                    android:title="@string/home" />
                <item
                    android:id="@+id/cart_screen"
                    android:icon="@drawable/ic_cart_foreground"
                    android:title="@string/petasos_cart" />
            </group>
        </menu>
    </item>

    <item android:title="@string/sensors">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/gps_sensor"
                    android:icon="@drawable/ic_gps_foreground"
                    android:title="@string/gps_sensor" />
                <item
                    android:id="@+id/sensor_screen"
                    android:icon="@mipmap/ic_petasos_foreground"
                    android:title="@string/delivery_robot_monitor" />
            </group>
        </menu>
    </item>

    <item android:title="@string/Settings">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/AccountSettings"
                    android:icon="@drawable/manage_account_foreground"
                    android:title="@string/account_settings" />
                <item
                    android:id="@+id/AppSettings"
                    android:icon="@drawable/ic_settings_foreground"
                    android:title="@string/AppSettings" />
                <item
                    android:id="@+id/FeedbackScreen"
                    android:icon="@drawable/ic_other_button"
                    android:title="@string/feedback" />
            </group>
        </menu>
    </item>

</menu>
