<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--
     Illia M. Popov | ID: n01421791
     William Margalik | ID: n01479878
     Dylan Ashton | ID: n01442206
     Ahmad Aljawish | ID: n01375348-->
    <item android:id="@+id/home"
        android:icon="@drawable/ic_home_foreground"
        android:title="@string/home"
        android:orderInCategory="300"
        app:showAsAction="always"/>

    <item android:id="@+id/help"
        android:title="@string/help"
        android:orderInCategory="300"
        app:showAsAction="never" />

    <item android:id="@+id/Settings_button"
        android:title="@string/Settings"
        android:orderInCategory="300"
        app:showAsAction="never" />

    <item android:id="@+id/location_button"
        android:title="@string/location"
        android:orderInCategory="300"
        app:showAsAction="never" />

    <item android:id="@+id/sign_out_button"
        android:title="@string/sign_out"
        android:orderInCategory="300"
        app:showAsAction="never" />

</menu>