<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/logo_dark"
    tools:context=".SignupScreen">
    <!--
     Illia M. Popov | ID: n01421791
     William Margalik | ID: n01479878
     Dylan Ashton | ID: n01442206
     Ahmad Aljawish | ID: n01375348-->
    <ImageView
        android:layout_width="489dp"
        android:layout_height="354dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:src="@mipmap/ic_logo_wine" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColorHint="@color/wine"
        android:inputType="textEmailAddress"
        android:layout_marginTop="16dp"
        android:importantForAccessibility="yes"
        android:contentDescription="@string/enter_your_email_address"
        android:textColor="@color/wine"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColorHint="@color/wine"
        android:inputType="textPassword"
        android:layout_marginTop="8dp"
        android:importantForAccessibility="yes"
        android:contentDescription="@string/enter_your_password"
        android:textColor="@color/wine"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/editTextFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:textColorHint="@color/wine"
        android:layout_marginTop="16dp"
        android:importantForAccessibility="yes"
        android:contentDescription="@string/enter_your_full_name"
        android:textColor="@color/wine"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:background="@color/wine"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"/>
    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:background="@color/wine"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        />
</LinearLayout>
