<?xml version="1.0" encoding="utf-8"?>
<!--
 Illia M. Popov | ID: n01421791
 William Margalik | ID: n01479878
 Dylan Ashton | ID: n01442206
 Ahmad Aljawish | ID: n01375348-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/logo_dark"
        tools:context=".AppSettings"
        android:id="@+id/AppSettings">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="32dp"
        android:paddingEnd="32dp">

        <!-- Notifications Switch -->
        <TextView
            android:id="@+id/label_notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/notifications"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ToggleButton
            android:id="@+id/switch_notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/label_notifications"
            app:layout_constraintStart_toEndOf="@+id/label_notifications"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <!-- Cities Spinner -->

        <!-- Dark Mode Toggle -->

        <TextView
            android:id="@+id/label_dark_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/theme"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="152dp" />

        <!-- Portrait/Landscape Toggle -->
        <ToggleButton
            android:id="@+id/toggle_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:textOff="@string/light"
            android:textOn="@string/dark"
            app:layout_constraintBaseline_toBaselineOf="@+id/label_dark_mode"
            app:layout_constraintStart_toEndOf="@+id/label_dark_mode" />

        <TextView
            android:id="@+id/label_orientation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="480dp"
            android:text="@string/orientation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ToggleButton
            android:id="@+id/toggle_portrait_landscape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="112dp"
            android:layout_marginBottom="456dp"
            android:textOff="@string/portrait"
            android:textOn="@string/landscape"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>



    </FrameLayout>



