<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/logo"
    tools:context=".ProductScreen">

    <!-- Product Image -->
    <ImageView
        android:id="@+id/product_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/product_placeholder"
        android:scaleType="centerCrop"
        android:layout_marginBottom="16dp"/>

    <!-- Product Name -->
    <TextView
        android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_name"
        android:textSize="26sp"
        android:textColor="@color/ceramic"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:id="@+id/product_producer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/producer"
        android:textSize="26sp"
        android:textColor="@color/wine"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"/>

    <!-- Product Price -->
    <TextView
        android:id="@+id/product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:textColor="@color/wine"
        android:textSize="24sp"
        android:layout_marginBottom="24dp"/>


    <!-- Quantity Selector -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/wine"
            android:text="@string/quantity"
            android:textSize="24sp"
            android:layout_gravity="center_vertical"/>

        <Spinner
            android:id="@+id/quantity_spinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:outlineAmbientShadowColor="@color/wine"
            android:outlineSpotShadowColor="@color/wine"
            android:entries="@array/quantity_array" />
    </LinearLayout>

    <Button
        android:id="@+id/pay_button"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:layout_marginTop="38dp"
        android:background="@drawable/button_background"
        android:text="@string/pay" />
</LinearLayout>
