<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/distance_sensor"
    android:background="@color/logo_dark"
    tools:context=".SensorDistance"
    android:padding="16dp">

    <!-- Header Section -->

    <ImageView
        android:id="@+id/imgBorder3"
        android:layout_width="381dp"
        android:layout_height="287dp"

        android:layout_below="@+id/txtHeader"
        android:layout_marginTop="162dp"
        android:src="@drawable/border" />

    <TextView
        android:id="@+id/txtHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/collision_avoidance"
        android:textColor="@color/wine"
        android:textStyle="bold"
        android:textSize="36sp"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:id="@+id/imgPetasos"
        android:layout_width="294dp"
        android:layout_height="178dp"
        android:layout_below="@id/txtHeader"
        android:layout_alignEnd="@+id/txtHeader"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="162dp"
        android:src="@mipmap/ic_petasos_foreground" />

    <ImageView
        android:id="@+id/imgSound"
        android:layout_width="215dp"
        android:layout_height="129dp"
        android:layout_below="@id/txtHeader"
        android:layout_alignEnd="@+id/txtHeader"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="77dp"
        android:src="@mipmap/ic_sound_foreground" />

    <ImageView
        android:id="@+id/imgStone"
        android:layout_width="227dp"
        android:layout_height="161dp"
        android:layout_below="@id/txtHeader"
        android:layout_alignEnd="@+id/txtHeader"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="-20dp"
        android:src="@mipmap/ic_object_foreground" />

    <TextView
        android:id="@+id/txtDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgPetasos"
        android:layout_alignStart="@+id/txtStatus"
        android:layout_marginStart="2dp"
        android:layout_marginTop="18dp"
        android:text="@string/distance"
        android:textColor="@color/wine"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txtValue"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgPetasos"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:layout_toEndOf="@+id/txtDistance"
        android:gravity="end"
        android:text="@string/num_0"
        android:textColor="@color/wine"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/txtUnit"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgPetasos"
        android:layout_marginStart="5dp"
        android:layout_marginTop="18dp"
        android:layout_toEndOf="@+id/txtValue"
        android:text="@string/meters"
        android:textColor="@color/wine"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/txtStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgPetasos"
        android:layout_alignEnd="@+id/txtHeader"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="173dp"
        android:text="@string/speed_mode"
        android:textColor="@color/wine"
        android:textSize="24dp" />

    <ImageView
        android:id="@+id/imgStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtUnit"
        android:layout_alignEnd="@+id/txtHeader"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="69dp"
        android:src="@mipmap/speed_max_round" />

    <Button
        android:id="@+id/btnUnits"
        android:layout_width="304dp"
        android:layout_height="62dp"
        android:layout_below="@id/imgStatus"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:background="@color/wine"
        android:text="@string/change_units"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/txtHistory"
        android:layout_width="197dp"
        android:layout_height="38dp"
        android:layout_below="@id/imgPetasos"
        android:layout_alignEnd="@+id/txtStatus"
        android:layout_marginTop="287dp"
        android:layout_marginEnd="14dp"
        android:text="@string/stops_history"
        android:textColor="@color/wine"
        android:textSize="24sp" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="wrap_content"
        android:layout_height="137dp"
        android:layout_below="@id/btnUnits"
        android:layout_marginTop="81dp" />

</RelativeLayout>
